unit tests for model classes